--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Flood Color</string>
+    <string name="replay">replay</string>
+    <string name="next">next</string>
+    <string name="you_win">You win</string>
 </resources>
