the buttons' size is now dependant on the screen's size, added a dialog window for the win/loss

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="replay">replay</string>
     <string name="next">next</string>
     <string name="you_win">You win</string>
+    <string name="you_lose">You lost</string>
+
+
 </resources>
